added 4 new mods

--- a/mods.html
+++ b/mods.html
@@ -200,18 +200,18 @@
 		<h2>Compatibility Progress</h2>
 		<div class="progress">
 			<!--
-				total mods:          68    100.00%
-				updated:             57     83.83%
-				kind-of updated:     3       4.41%
-				kind-of outdated:    1       1.47%
-				outdated:            6       8.88%
-				abandoned:           1       1.47%
+				total mods:          72    100.00%
+				updated:             61     84.72%
+				kind-of updated:     3       4.17%
+				kind-of outdated:    1       1.39%
+				outdated:            6       8.33%
+				abandoned:           1       1.39%
 			-->
-			<div class="updated" style="width:84%"></div>
-			<div class="kindof-updated" style="width:5%"></div>
-			<div class="kindof-outdated" style="width:1%"></div>
-			<div class="outdated" style="width:9%"></div>
-			<div class="abandoned" style="width:1%"></div>
+			<div class="updated" style="width:84.5%"></div>
+			<div class="kindof-updated" style="width:4%"></div>
+			<div class="kindof-outdated" style="width:1.5%"></div>
+			<div class="outdated" style="width:8.5%"></div>
+			<div class="abandoned" style="width:1.5%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -387,6 +387,34 @@
 				</h3>
 				<p>Uses the nvidia rendering engine.</p>
 				<p><i>(<a href="https://modrinth.com/mod/nvidium" target="_blank">Original</a> appears abandoned.)</i></p>
+			</div>
+			<div class="mod-version">
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
+			</div>
+		</div>
+		<div class="mod" id="particle-core">
+			<div class="mod-icon">
+				<img src="https://cdn.modrinth.com/data/RSeLon5O/147110a6a4457b2f287f68fc626771f0f8ef2cde_96.webp" />
+			</div>
+			<div class="mod-description">
+				<h3>
+					<a href="https://modrinth.com/mod/particle-core" target="_blank">Particle Core</a>
+				</h3>
+				<p>Particle optimizations.</p>
+			</div>
+			<div class="mod-version">
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
+			</div>
+		</div>
+		<div class="mod" id="scalablelux">
+			<div class="mod-icon">
+				<img src="https://cdn.modrinth.com/data/Ps1zyz6x/27133942a1a58af1bb11b087957ea4cc14414dd3_96.webp" />
+			</div>
+			<div class="mod-description">
+				<h3>
+					<a href="https://modrinth.com/mod/scalablelux" target="_blank">ScalableLux</a>
+				</h3>
+				<p>Improves the performance of light updates.</p>
 			</div>
 			<div class="mod-version">
 				<span class="updated"><span class="circle"></span> 1.21.8</span>
@@ -580,6 +608,20 @@
 		</div>
 		<h2>Bug Fixes</h2>
 		<p>These mods fix bugs.</p>
+		<div class="mod" id="centered-crosshair">
+			<div class="mod-icon">
+				<img src="https://cdn.modrinth.com/data/xUTHly0N/e53db5e91989e352d3c95dde6a76a4b36654ce83.png" />
+			</div>
+			<div class="mod-description">
+				<h3>
+					<a href="https://modrinth.com/mod/centered-crosshair" target="_blank">Centered Crosshair</a>
+				</h3>
+				<p>Centers the crosshair to be perfectly in the middle of the screen.</p>
+			</div>
+			<div class="mod-version">
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
+			</div>
+		</div>
 		<div class="mod" id="debugify">
 			<div class="mod-icon">
 				<img src="https://cdn-raw.modrinth.com/data/QwxR6Gcd/d1db8e74a5ad29908bd011ce271145cea349cd13.png" />
@@ -1116,6 +1158,20 @@
 					<a href="https://modrinth.com/mod/fabric-language-kotlin" target="_blank">Fabric Language Kotlin</a>
 				</h3>
 				<p>Required by <a href="#optigui">OptiGUI</a> and <a href="#zoomify">Zoomify</a>.</p>
+			</div>
+			<div class="mod-version">
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
+			</div>
+		</div>
+		<div class="mod" id="fzzy-config">
+			<div class="mod-icon">
+				<img src="https://cdn.modrinth.com/data/hYykXjDp/11f469b1bf1f201a95c2e3ddc09ca47d85c3ed53.png" />
+			</div>
+			<div class="mod-description">
+				<h3>
+					<a href="https://modrinth.com/mod/fzzy-config" target="_blank">Fzzy Config</a>
+				</h3>
+				<p>Required by <a href="#particle-core">Particle Core</a>.</p>
 			</div>
 			<div class="mod-version">
 				<span class="updated"><span class="circle"></span> 1.21.8</span>
