--- a/mods.html
+++ b/mods.html
@@ -1143,7 +1143,7 @@
 				<h3>
 					<a href="https://modrinth.com/mod/fabric-api" target="_blank">Fabric API</a>
 				</h3>
-				<p>Required by <a href="#better-statistics-screen">Better Statistics Screen</a>, <a href="#enhanced-block-entities">Enhanced Block Entities</a>, <a href="#nuit">Nuit</a>, <a href="#horse-stats-vanilla">Horse Stats Vanilla</a>, <a href="#mod-menu">Mod Menu</a>, <a href="#no-chat-reports">No Chat Reports</a>, <a href="#optigui">OptiGUI</a>, <a href="#shulker-box-tooltip">Shulker Box Tooltip</a>, <a href="#smooth-swapping">Smooth Swapping</a>, and <a href="#sodium-dynamic-lights">Sodium Dynamic Lights</a>.</p>
+				<p>Required by <a href="#better-statistics-screen">Better Statistics Screen</a>, <a href="#enhanced-block-entities">Enhanced Block Entities</a>, <a href="#nuit">Nuit</a>, <a href="#horse-stats-vanilla">Horse Stats Vanilla</a>, <a href="#mod-menu">Mod Menu</a>, <a href="#no-chat-reports">No Chat Reports</a>, <a href="#optigui">OptiGUI</a>, <a href="#particle-core">Particle Core</a>, <a href="#shulker-box-tooltip">Shulker Box Tooltip</a>, <a href="#smooth-swapping">Smooth Swapping</a>, and <a href="#sodium-dynamic-lights">Sodium Dynamic Lights</a>.</p>
 			</div>
 			<div class="mod-version">
 				<span class="updated"><span class="circle"></span> 1.21.8</span>
@@ -1157,7 +1157,7 @@
 				<h3>
 					<a href="https://modrinth.com/mod/fabric-language-kotlin" target="_blank">Fabric Language Kotlin</a>
 				</h3>
-				<p>Required by <a href="#optigui">OptiGUI</a> and <a href="#zoomify">Zoomify</a>.</p>
+				<p>Required by <a href="#optigui">OptiGUI</a>, <a href="#particle-core">Particle Core</a>, <a href="#zoomify">Zoomify</a>.</p>
 			</div>
 			<div class="mod-version">
 				<span class="updated"><span class="circle"></span> 1.21.8</span>
