add architectury dependency

--- a/mods.html
+++ b/mods.html
@@ -200,17 +200,17 @@
 		<h2>Compatibility Progress</h2>
 		<div class="progress">
 			<!--
-				total mods:          72    100.00%
-				updated:             61     84.72%
-				kind-of updated:     3       4.17%
-				kind-of outdated:    1       1.39%
-				outdated:            6       8.33%
-				abandoned:           1       1.39%
+				total mods:          73    100.00%
+				updated:             62     84.93%
+				kind-of updated:     3       4.11%
+				kind-of outdated:    1       1.37%
+				outdated:            6       8.22%
+				abandoned:           1       1.37%
 			-->
-			<div class="updated" style="width:84.5%"></div>
+			<div class="updated" style="width:85%"></div>
 			<div class="kindof-updated" style="width:4%"></div>
 			<div class="kindof-outdated" style="width:1.5%"></div>
-			<div class="outdated" style="width:8.5%"></div>
+			<div class="outdated" style="width:8%"></div>
 			<div class="abandoned" style="width:1.5%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -1121,6 +1121,20 @@
 		</div>
 		<h2>Dependencies</h2>
 		<p>The following mods are required by one or more of the mods above, or a combination of the them, to work properly.</p>
+		<div class="mod" id="architectury-api">
+			<div class="mod-icon">
+				<img src="https://cdn.modrinth.com/data/lhGA9TYQ/05fe3a61c28faaccaec3533b92e1b321edde7bf6_96.webp" />
+			</div>
+			<div class="mod-description">
+				<h3>
+					<a href="https://modrinth.com/mod/architectury-api" target="_blank">Cloth Config API</a>
+				</h3>
+				<p>Required by <a href="#better-statistics-screen">Better Statistics Screen</a>.</p>
+			</div>
+			<div class="mod-version">
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
+			</div>
+		</div>
 		<div class="mod" id="cloth-config-api">
 			<div class="mod-icon">
 				<img src="https://cdn-raw.modrinth.com/data/9s6osm5g/icon.png" />
