--- a/mods.html
+++ b/mods.html
@@ -1127,7 +1127,7 @@
 			</div>
 			<div class="mod-description">
 				<h3>
-					<a href="https://modrinth.com/mod/architectury-api" target="_blank">Cloth Config API</a>
+					<a href="https://modrinth.com/mod/architectury-api" target="_blank">Architectury API</a>
 				</h3>
 				<p>Required by <a href="#better-statistics-screen">Better Statistics Screen</a>.</p>
 			</div>
