add locator bar mods

--- a/mods.html
+++ b/mods.html
@@ -200,12 +200,12 @@
 		<h2>Compatibility Progress</h2>
 		<div class="progress">
 			<!--
-				total mods:          73    100.00%
-				updated:             62     84.93%
-				kind-of updated:     3       4.11%
-				kind-of outdated:    1       1.37%
-				outdated:            6       8.22%
-				abandoned:           1       1.37%
+				total mods:          75    100.00%
+				updated:             64     85.33%
+				kind-of updated:     3       4.00%
+				kind-of outdated:    1       1.33%
+				outdated:            6       8.00%
+				abandoned:           1       1.33%
 			-->
 			<div class="updated" style="width:85%"></div>
 			<div class="kindof-updated" style="width:4%"></div>
@@ -1091,6 +1091,34 @@
 				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
+		<div class="mod" id="locator-heads">
+			<div class="mod-icon">
+				<img src="https://cdn.modrinth.com/data/L4pt5egz/933e270e6b68639189f618948f11d3828597df39.png" />
+			</div>
+			<div class="mod-description">
+				<h3>
+					<a href="https://modrinth.com/mod/locator-heads" target="_blank">Locator Heads</a>
+				</h3>
+				<p>Show player heads on the locator bar.</p>
+			</div>
+			<div class="mod-version">
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
+			</div>
+		</div>
+		<div class="mod" id="locator-lodestones">
+			<div class="mod-icon">
+				<img src="https://cdn.modrinth.com/data/pMBcsVIg/a54a8981668c595fcad6bd497b763d10d5e18325_96.webp" />
+			</div>
+			<div class="mod-description">
+				<h3>
+					<a href="https://modrinth.com/mod/locator_lodestones" target="_blank">Locator Lodestones</a>
+				</h3>
+				<p>Adds lodestones to the player locator bar.</p>
+			</div>
+			<div class="mod-version">
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
+			</div>
+		</div>
 		<div class="mod" id="no-chat-reports">
 			<div class="mod-icon">
 				<img src="https://cdn-raw.modrinth.com/data/qQyHxfxd/icon.png" />
@@ -1120,7 +1148,7 @@
 			</div>
 		</div>
 		<h2>Dependencies</h2>
-		<p>The following mods are required by one or more of the mods above, or a combination of the them, to work properly.</p>
+		<p>The following mods are required by one or more of the mods above to function.</p>
 		<div class="mod" id="architectury-api">
 			<div class="mod-icon">
 				<img src="https://cdn.modrinth.com/data/lhGA9TYQ/05fe3a61c28faaccaec3533b92e1b321edde7bf6_96.webp" />
@@ -1143,7 +1171,7 @@
 				<h3>
 					<a href="https://modrinth.com/mod/cloth-config" target="_blank">Cloth Config API</a>
 				</h3>
-				<p>Required when using <a href="#more-culling">More Culling</a>, <a href="#no-chat-reports">No Chat Reports</a>, <a href="#paginated-advancements">Paginated Advancements</a>, and/or <a href="#sound-physics-remastered">Sound Physics Remastered</a> together with <a href="#mod-menu">Mod Menu</a>.</p>
+				<p>Required by <a href="#locator-heads">Locator Heads</a>, <a href="#more-culling">More Culling</a>, <a href="#no-chat-reports">No Chat Reports</a>, <a href="#paginated-advancements">Paginated Advancements</a>, and <a href="#sound-physics-remastered">Sound Physics Remastered</a>.</p>
 			</div>
 			<div class="mod-version">
 				<span class="updated"><span class="circle"></span> 1.21.8</span>
@@ -1157,7 +1185,7 @@
 				<h3>
 					<a href="https://modrinth.com/mod/fabric-api" target="_blank">Fabric API</a>
 				</h3>
-				<p>Required by <a href="#better-statistics-screen">Better Statistics Screen</a>, <a href="#enhanced-block-entities">Enhanced Block Entities</a>, <a href="#nuit">Nuit</a>, <a href="#horse-stats-vanilla">Horse Stats Vanilla</a>, <a href="#mod-menu">Mod Menu</a>, <a href="#no-chat-reports">No Chat Reports</a>, <a href="#optigui">OptiGUI</a>, <a href="#particle-core">Particle Core</a>, <a href="#shulker-box-tooltip">Shulker Box Tooltip</a>, <a href="#smooth-swapping">Smooth Swapping</a>, and <a href="#sodium-dynamic-lights">Sodium Dynamic Lights</a>.</p>
+				<p>Required by <a href="#better-statistics-screen">Better Statistics Screen</a>, <a href="#enhanced-block-entities">Enhanced Block Entities</a>, <a href="#nuit">Nuit</a>, <a href="#horse-stats-vanilla">Horse Stats Vanilla</a>, <a href="#locator-heads">Locator Heads</a>, <a href="#locator-lodestones">Locator Lodestones</a>, <a href="#mod-menu">Mod Menu</a>, <a href="#no-chat-reports">No Chat Reports</a>, <a href="#optigui">OptiGUI</a>, <a href="#particle-core">Particle Core</a>, <a href="#shulker-box-tooltip">Shulker Box Tooltip</a>, <a href="#smooth-swapping">Smooth Swapping</a>, and <a href="#sodium-dynamic-lights">Sodium Dynamic Lights</a>.</p>
 			</div>
 			<div class="mod-version">
 				<span class="updated"><span class="circle"></span> 1.21.8</span>
@@ -1171,7 +1199,7 @@
 				<h3>
 					<a href="https://modrinth.com/mod/fabric-language-kotlin" target="_blank">Fabric Language Kotlin</a>
 				</h3>
-				<p>Required by <a href="#optigui">OptiGUI</a>, <a href="#particle-core">Particle Core</a>, <a href="#zoomify">Zoomify</a>.</p>
+				<p>Required by <a href="#optigui">OptiGUI</a>, <a href="#particle-core">Particle Core</a>, and <a href="#zoomify">Zoomify</a>.</p>
 			</div>
 			<div class="mod-version">
 				<span class="updated"><span class="circle"></span> 1.21.8</span>
