--- a/mods.html
+++ b/mods.html
@@ -201,14 +201,14 @@
 		<div class="progress">
 			<!--
 				total mods:          75    100.00%
-				updated:             64     85.33%
-				kind-of updated:     3       4.00%
+				updated:             65     86.67%
+				kind-of updated:     2       2.67%
 				kind-of outdated:    1       1.33%
 				outdated:            6       8.00%
 				abandoned:           1       1.33%
 			-->
-			<div class="updated" style="width:85%"></div>
-			<div class="kindof-updated" style="width:4%"></div>
+			<div class="updated" style="width:86.5%"></div>
+			<div class="kindof-updated" style="width:2.5%"></div>
 			<div class="kindof-outdated" style="width:1.5%"></div>
 			<div class="outdated" style="width:8%"></div>
 			<div class="abandoned" style="width:1.5%"></div>
@@ -561,7 +561,7 @@
 				<p>Implements the OptiFine custom colors format.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.7</span>
+				<span class="outdated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<div class="mod" id="sodium-dynamic-lights">
@@ -761,7 +761,7 @@
 				<p>Overhauls the advancements screen.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.7</span>
+				<span class="updated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<div class="mod" id="particular">
