--- a/mods.html
+++ b/mods.html
@@ -201,16 +201,16 @@
 		<div class="progress">
 			<!--
 				total mods:          75    100.00%
-				updated:             32     42.67%
+				updated:             33     44.00%
 				kind-of updated:     0       0.00%
 				kind-of outdated:    0       0.00%
-				outdated:            42     56.00%
+				outdated:            41     54.67%
 				abandoned:           1       1.33%
 			-->
-			<div class="updated" style="width:42.5%"></div>
+			<div class="updated" style="width:44%"></div>
 			<div class="kindof-updated" style="width:0%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:56%"></div>
+			<div class="outdated" style="width:54.5%"></div>
 			<div class="abandoned" style="width:1.5%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -1144,7 +1144,7 @@
 				<p>Better options menu for <a href="#sodium">Sodium</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.8</span>
+				<span class="updated"><span class="circle"></span> 1.21.9</span>
 			</div>
 		</div>
 		<h2>Dependencies</h2>
