--- a/mods.html
+++ b/mods.html
@@ -201,16 +201,16 @@
 		<div class="progress">
 			<!--
 				total mods:          75    100.00%
-				updated:             33     44.00%
+				updated:             37     49.33%
 				kind-of updated:     0       0.00%
 				kind-of outdated:    0       0.00%
-				outdated:            41     54.67%
+				outdated:            37     49.33%
 				abandoned:           1       1.33%
 			-->
-			<div class="updated" style="width:44%"></div>
+			<div class="updated" style="width:49.5%"></div>
 			<div class="kindof-updated" style="width:0%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:54.5%"></div>
+			<div class="outdated" style="width:49%"></div>
 			<div class="abandoned" style="width:1.5%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -589,7 +589,7 @@
 				<p>Adds some configurations not included in <a href="#sodium">Sodium</a>, such as adjustable cloud height and more advanced particle controls.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.8</span>
+				<span class="updated"><span class="circle"></span> 1.21.9</span>
 			</div>
 		</div>
 		<div class="mod" id="zoomify">
@@ -846,7 +846,7 @@
 				<p>Adds bars to the status effects overlay to show the remaining duration of effects.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.8</span>
+				<span class="updated"><span class="circle"></span> 1.21.9</span>
 			</div>
 		</div>
 		<div class="mod" id="tiny-item-animations">
@@ -1032,7 +1032,7 @@
 				<p>Improves the statistics screen.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.8</span>
+				<span class="updated"><span class="circle"></span> 1.21.9</span>
 			</div>
 		</div>
 		<div class="mod" id="chat-heads">
@@ -1272,7 +1272,7 @@
 				<p>Required by <a href="#better-statistics-screen">Better Statistics Screen</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.8</span>
+				<span class="updated"><span class="circle"></span> 1.21.9</span>
 			</div>
 		</div>
 		<div class="mod" id="yetanotherconfiglib">
