--- a/mods.html
+++ b/mods.html
@@ -201,16 +201,16 @@
 		<div class="progress">
 			<!--
 				total mods:          75    100.00%
-				updated:             37     49.33%
+				updated:             39     52.00%
 				kind-of updated:     0       0.00%
 				kind-of outdated:    0       0.00%
-				outdated:            37     49.33%
+				outdated:            35     46.67%
 				abandoned:           1       1.33%
 			-->
-			<div class="updated" style="width:49.5%"></div>
+			<div class="updated" style="width:52%"></div>
 			<div class="kindof-updated" style="width:0%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:49%"></div>
+			<div class="outdated" style="width:46.5%"></div>
 			<div class="abandoned" style="width:1.5%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -318,7 +318,7 @@
 				<p>Optimizes networking.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.8</span>
+				<span class="updated"><span class="circle"></span> 1.21.9</span>
 			</div>
 		</div>
 		<div class="mod" id="language-reload">
@@ -547,7 +547,7 @@
 				<p>Implements the OptiFine custom GUI format.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.8</span>
+				<span class="updated"><span class="circle"></span> 1.21.9</span>
 			</div>
 		</div>
 		<div class="mod" id="polytone">
