--- a/mods.html
+++ b/mods.html
@@ -201,16 +201,16 @@
 		<div class="progress">
 			<!--
 				total mods:          75    100.00%
-				updated:             39     52.00%
+				updated:             40     53.33%
 				kind-of updated:     0       0.00%
 				kind-of outdated:    0       0.00%
-				outdated:            35     46.67%
+				outdated:            34     45.33%
 				abandoned:           1       1.33%
 			-->
-			<div class="updated" style="width:52%"></div>
+			<div class="updated" style="width:53.5%"></div>
 			<div class="kindof-updated" style="width:0%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:46.5%"></div>
+			<div class="outdated" style="width:45%"></div>
 			<div class="abandoned" style="width:1.5%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -1216,7 +1216,7 @@
 				<p>Required by <a href="#particle-core">Particle Core</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.8</span>
+				<span class="updated"><span class="circle"></span> 1.21.9</span>
 			</div>
 		</div>
 		<div class="mod" id="malilib">
