--- a/mods.html
+++ b/mods.html
@@ -201,16 +201,16 @@
 		<div class="progress">
 			<!--
 				total mods:          75    100.00%
-				updated:             40     53.33%
-				kind-of updated:     0       0.00%
-				kind-of outdated:    0       0.00%
-				outdated:            34     45.33%
+				updated:             21     28.00%
+				kind-of updated:     21     28.00%
+				kind-of outdated:    1       1.33%
+				outdated:            31     41.33%
 				abandoned:           1       1.33%
 			-->
-			<div class="updated" style="width:53.5%"></div>
-			<div class="kindof-updated" style="width:0%"></div>
-			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:45%"></div>
+			<div class="updated" style="width:28%"></div>
+			<div class="kindof-updated" style="width:28%"></div>
+			<div class="kindof-outdated" style="width:1.5%"></div>
+			<div class="outdated" style="width:41%"></div>
 			<div class="abandoned" style="width:1.5%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -234,7 +234,7 @@
 				<p>Optimization mod that focuses on things other than rendering.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.9</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.9</span>
 			</div>
 		</div>
 		<div class="mod" id="enhanced-block-entities">
@@ -262,7 +262,7 @@
 				<p>Skips rendering entities that aren't in view.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.8</span>
+				<span class="updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
 		<div class="mod" id="fast-ip-ping">
@@ -276,7 +276,7 @@
 				<p>Skips reversed DNS lookup for literal IP addresses.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.9</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.9</span>
 			</div>
 		</div>
 		<div class="mod" id="ferritecore">
@@ -290,7 +290,7 @@
 				<p>Reduces memory usage.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.9</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.9</span>
 			</div>
 		</div>
 		<div class="mod" id="immediatelyfast">
@@ -304,7 +304,7 @@
 				<p>Improves immediate mode rendering performance.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.9</span>
+				<span class="updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
 		<div class="mod" id="krypton">
@@ -318,7 +318,7 @@
 				<p>Optimizes networking.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.9</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.9</span>
 			</div>
 		</div>
 		<div class="mod" id="language-reload">
@@ -346,7 +346,7 @@
 				<p>Optimizes general game logic to improve tick speed.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.9</span>
+				<span class="kindof-outdated"><span class="circle"></span> 1.21.9</span>
 			</div>
 		</div>
 		<div class="mod" id="more-culling">
@@ -360,7 +360,7 @@
 				<p>More aggressive block face culling.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.9</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.9</span>
 			</div>
 		</div>
 		<div class="mod" id="noisium">
@@ -417,7 +417,7 @@
 				<p>Improves the performance of light updates.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.9</span>
+				<span class="updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
 		<div class="mod" id="sodium">
@@ -432,7 +432,7 @@
 				<p>Required by <a href="#iris">Iris</a>, <a href="#nvidium">NVidium</a>, <a href="#reeses-sodium-options">Reese's Sodium Options</a>, and <a href="#sodium-extra">Sodium Extra</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.9</span>
+				<span class="updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
 		<h2>OptiFine/MCPatcher Features</h2>
@@ -476,7 +476,7 @@
 				<p>Implements the OptiFine custom entity models and animations format.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.8</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.9</span>
 			</div>
 		</div>
 		<div class="mod" id="entity-texture-features">
@@ -490,7 +490,7 @@
 				<p>Implements the OptiFine random and emissive mob textures format.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.8</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.9</span>
 			</div>
 		</div>
 		<div class="mod" id="iris">
@@ -504,7 +504,7 @@
 				<p>Implements the OptiFine shader format.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.9</span>
+				<span class="updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
 		<div class="mod" id="nuit">
@@ -547,7 +547,7 @@
 				<p>Implements the OptiFine custom GUI format.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.9</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.9</span>
 			</div>
 		</div>
 		<div class="mod" id="polytone">
@@ -589,7 +589,7 @@
 				<p>Adds some configurations not included in <a href="#sodium">Sodium</a>, such as adjustable cloud height and more advanced particle controls.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.9</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.9</span>
 			</div>
 		</div>
 		<div class="mod" id="zoomify">
@@ -603,7 +603,7 @@
 				<p>Adds a highly-configurable zoom.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.9</span>
+				<span class="updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
 		<h2>Bug Fixes</h2>
@@ -619,7 +619,7 @@
 				<p>Centers the crosshair to be perfectly in the middle of the screen.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.9</span>
+				<span class="updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
 		<div class="mod" id="debugify">
@@ -647,7 +647,7 @@
 				<p>Fixes the stitching on block and item models.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.8</span>
+				<span class="outdated"><span class="circle"></span> 1.21.8</span>
 			</div>
 		</div>
 		<div class="mod" id="modernfix">
@@ -733,7 +733,7 @@
 				<p>Adds sounds for drip particles landing.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.9</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.9</span>
 			</div>
 		</div>
 		<div class="mod" id="not-enough-animations">
@@ -789,7 +789,7 @@
 				<p>Smoothly scrolls chat, hotbar, creative inventory, etc.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.9</span>
+				<span class="updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
 		<div class="mod" id="smooth-swapping">
@@ -818,7 +818,7 @@
 				<p>Provides realistic sound attenuation, reverberation, and absorption.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.9</span>
+				<span class="updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
 		<div class="mod" id="sounds">
@@ -832,7 +832,7 @@
 				<p>Adds and enhances sound effects throughout out the world, UI, and chat.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.9</span>
+				<span class="updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
 		<div class="mod" id="status-effect-bars">
@@ -846,7 +846,7 @@
 				<p>Adds bars to the status effects overlay to show the remaining duration of effects.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.9</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.10-rc1</span>
 			</div>
 		</div>
 		<div class="mod" id="tiny-item-animations">
@@ -874,7 +874,7 @@
 				<p>Little visual improvements by adding a bunch of new particles.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.9</span>
+				<span class="updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
 		<div class="mod" id="wavey-capes">
@@ -918,7 +918,7 @@
 				<p>Shows information about what you are looking at.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.9</span>
+				<span class="updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
 		<div class="mod" id="litematica">
@@ -932,7 +932,7 @@
 				<p>Provides a holographic overlay of saved builds.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.9</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.9</span>
 			</div>
 		</div>
 		<div class="mod" id="minihud">
@@ -946,7 +946,7 @@
 				<p>Provides on-screen info on various in-world properties.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.9</span>
+				<span class="updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
 		<div class="mod" id="mod-menu">
@@ -960,7 +960,7 @@
 				<p>Provides a menu in which to see and configure all mods which you have installed.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.9</span>
+				<span class="updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
 		<div class="mod" id="notes">
@@ -988,7 +988,7 @@
 				<p>See contents of shulker box in inventory.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.9</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.9</span>
 			</div>
 		</div>
 		<h2>Other Quality of Life Improvements</h2>
@@ -1032,7 +1032,7 @@
 				<p>Improves the statistics screen.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.9</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.9</span>
 			</div>
 		</div>
 		<div class="mod" id="chat-heads">
@@ -1046,7 +1046,7 @@
 				<p>See who you're chatting with!</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.9</span>
+				<span class="updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
 		<div class="mod" id="chat-patches">
@@ -1088,7 +1088,7 @@
 				<p>Removes all fade-out animations.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.9</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.9</span>
 			</div>
 		</div>
 		<div class="mod" id="locator-heads">
@@ -1102,7 +1102,7 @@
 				<p>Show player heads on the locator bar.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.8</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.9</span>
 			</div>
 		</div>
 		<div class="mod" id="locator-lodestones">
@@ -1144,7 +1144,7 @@
 				<p>Better options menu for <a href="#sodium">Sodium</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.9</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.9</span>
 			</div>
 		</div>
 		<h2>Dependencies</h2>
@@ -1160,7 +1160,7 @@
 				<p>Required by <a href="#better-statistics-screen">Better Statistics Screen</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.9</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.9</span>
 			</div>
 		</div>
 		<div class="mod" id="cloth-config-api">
@@ -1171,10 +1171,10 @@
 				<h3>
 					<a href="https://modrinth.com/mod/cloth-config" target="_blank">Cloth Config API</a>
 				</h3>
-				<p>Required by <a href="#locator-heads">Locator Heads</a>, <a href="#more-culling">More Culling</a>, <a href="#no-chat-reports">No Chat Reports</a>, <a href="#paginated-advancements">Paginated Advancements</a>, and <a href="#sound-physics-remastered">Sound Physics Remastered</a>.</p>
+				<p>Required by <a href="#locator-heads">Locator Heads</a>, <a href="#more-culling">More Culling</a>, <a href="#no-chat-reports">No Chat Reports</a>, <a href="#paginated-advancements">Paginated Advancements</a>, <a href="#sound-physics-remastered">Sound Physics Remastered</a>, <a href="#visuality">Visuality</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.9</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.9</span>
 			</div>
 		</div>
 		<div class="mod" id="fabric-api">
@@ -1188,7 +1188,7 @@
 				<p>Required by <a href="#better-statistics-screen">Better Statistics Screen</a>, <a href="#enhanced-block-entities">Enhanced Block Entities</a>, <a href="#nuit">Nuit</a>, <a href="#horse-stats-vanilla">Horse Stats Vanilla</a>, <a href="#locator-heads">Locator Heads</a>, <a href="#locator-lodestones">Locator Lodestones</a>, <a href="#mod-menu">Mod Menu</a>, <a href="#no-chat-reports">No Chat Reports</a>, <a href="#optigui">OptiGUI</a>, <a href="#particle-core">Particle Core</a>, <a href="#shulker-box-tooltip">Shulker Box Tooltip</a>, <a href="#smooth-swapping">Smooth Swapping</a>, and <a href="#sodium-dynamic-lights">Sodium Dynamic Lights</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.9</span>
+				<span class="updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
 		<div class="mod" id="fabric-language-kotlin">
@@ -1202,7 +1202,7 @@
 				<p>Required by <a href="#optigui">OptiGUI</a>, <a href="#particle-core">Particle Core</a>, and <a href="#zoomify">Zoomify</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.9</span>
+				<span class="updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
 		<div class="mod" id="fzzy-config">
@@ -1216,7 +1216,7 @@
 				<p>Required by <a href="#particle-core">Particle Core</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.9</span>
+				<span class="updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
 		<div class="mod" id="malilib">
@@ -1230,7 +1230,7 @@
 				<p>Required by <a href="#litematica">Litematica</a> and <a href="#minihud">MiniHUD</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.9</span>
+				<span class="updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
 		<div class="mod" id="mru">
@@ -1244,7 +1244,7 @@
 				<p>Required by <a href="#sounds">Sounds</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.9</span>
+				<span class="updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
 		<div class="mod" id="owo">
@@ -1258,7 +1258,7 @@
 				<p>Required by <a href="#particular">Particular</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.9</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.9</span>
 			</div>
 		</div>
 		<div class="mod" id="tcdcommons-api">
@@ -1272,7 +1272,7 @@
 				<p>Required by <a href="#better-statistics-screen">Better Statistics Screen</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.9</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21.9</span>
 			</div>
 		</div>
 		<div class="mod" id="yetanotherconfiglib">
@@ -1286,7 +1286,7 @@
 				<p>Required by <a href="@chat-patches">Chat Patches</a>, <a href="#debugify">Debugify</a>, <a href="#sounds">Sounds</a>, and <a href="#zoomify">Zoomify</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.9</span>
+				<span class="updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
 	</body>
