--- a/mods.html
+++ b/mods.html
@@ -201,14 +201,14 @@
 		<div class="progress">
 			<!--
 				total mods:          75    100.00%
-				updated:             21     28.00%
-				kind-of updated:     21     28.00%
+				updated:             22     29.33%
+				kind-of updated:     20     26.67%
 				kind-of outdated:    1       1.33%
 				outdated:            31     41.33%
 				abandoned:           1       1.33%
 			-->
-			<div class="updated" style="width:28%"></div>
-			<div class="kindof-updated" style="width:28%"></div>
+			<div class="updated" style="width:29%"></div>
+			<div class="kindof-updated" style="width:27%"></div>
 			<div class="kindof-outdated" style="width:1.5%"></div>
 			<div class="outdated" style="width:41%"></div>
 			<div class="abandoned" style="width:1.5%"></div>
@@ -932,7 +932,7 @@
 				<p>Provides a holographic overlay of saved builds.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.9</span>
+				<span class="updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
 		<div class="mod" id="minihud">
