--- a/mods.html
+++ b/mods.html
@@ -201,15 +201,15 @@
 		<div class="progress">
 			<!--
 				total mods:          75    100.00%
-				updated:             22     29.33%
-				kind-of updated:     20     26.67%
-				kind-of outdated:    1       1.33%
+				updated:             24     32.00%
+				kind-of updated:     19     25.33%
+				kind-of outdated:    0       0.00%
 				outdated:            31     41.33%
 				abandoned:           1       1.33%
 			-->
-			<div class="updated" style="width:29%"></div>
-			<div class="kindof-updated" style="width:27%"></div>
-			<div class="kindof-outdated" style="width:1.5%"></div>
+			<div class="updated" style="width:32%"></div>
+			<div class="kindof-updated" style="width:25.5%"></div>
+			<div class="kindof-outdated" style="width:0%"></div>
 			<div class="outdated" style="width:41%"></div>
 			<div class="abandoned" style="width:1.5%"></div>
 		</div>
@@ -234,7 +234,7 @@
 				<p>Optimization mod that focuses on things other than rendering.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.9</span>
+				<span class="updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
 		<div class="mod" id="enhanced-block-entities">
@@ -346,7 +346,7 @@
 				<p>Optimizes general game logic to improve tick speed.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-outdated"><span class="circle"></span> 1.21.9</span>
+				<span class="updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
 		<div class="mod" id="more-culling">
