--- a/mods.html
+++ b/mods.html
@@ -201,16 +201,16 @@
 		<div class="progress">
 			<!--
 				total mods:          75    100.00%
-				updated:             33     44.00%
+				updated:             34     45.33%
 				kind-of updated:     14     18.67%
 				kind-of outdated:    0       0.00%
-				outdated:            27     36.00%
+				outdated:            26     34.67%
 				abandoned:           1       1.33%
 			-->
-			<div class="updated" style="width:44%"></div>
+			<div class="updated" style="width:45%"></div>
 			<div class="kindof-updated" style="width:18.5%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:36%"></div>
+			<div class="outdated" style="width:35%"></div>
 			<div class="abandoned" style="width:1.5%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -675,7 +675,7 @@
 				<p>Ports the bugfixes offered by the Paper project to Fabric.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.8</span>
+				<span class="updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
 		<h2>Graphical and Audio Improvements</h2>
