--- a/mods.html
+++ b/mods.html
@@ -201,14 +201,14 @@
 		<div class="progress">
 			<!--
 				total mods:          75    100.00%
-				updated:             34     45.33%
-				kind-of updated:     14     18.67%
+				updated:             35     46.67%
+				kind-of updated:     13     17.33%
 				kind-of outdated:    0       0.00%
 				outdated:            26     34.67%
 				abandoned:           1       1.33%
 			-->
-			<div class="updated" style="width:45%"></div>
-			<div class="kindof-updated" style="width:18.5%"></div>
+			<div class="updated" style="width:46.5%"></div>
+			<div class="kindof-updated" style="width:17%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
 			<div class="outdated" style="width:35%"></div>
 			<div class="abandoned" style="width:1.5%"></div>
@@ -1102,7 +1102,7 @@
 				<p>Show player heads on the locator bar.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.9</span>
+				<span class="updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
 		<div class="mod" id="locator-lodestones">
