--- a/mods.html
+++ b/mods.html
@@ -201,16 +201,16 @@
 		<div class="progress">
 			<!--
 				total mods:          75    100.00%
-				updated:             35     46.67%
-				kind-of updated:     13     17.33%
+				updated:             36     48.00%
+				kind-of updated:     12     16.00%
 				kind-of outdated:    0       0.00%
 				outdated:            26     34.67%
 				abandoned:           1       1.33%
 			-->
-			<div class="updated" style="width:46.5%"></div>
-			<div class="kindof-updated" style="width:17%"></div>
+			<div class="updated" style="width:48%"></div>
+			<div class="kindof-updated" style="width:16%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:35%"></div>
+			<div class="outdated" style="width:35.5%"></div>
 			<div class="abandoned" style="width:1.5%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -846,7 +846,7 @@
 				<p>Adds bars to the status effects overlay to show the remaining duration of effects.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.10-rc1</span>
+				<span class="updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
 		<div class="mod" id="tiny-item-animations">
