--- a/mods.html
+++ b/mods.html
@@ -201,16 +201,16 @@
 		<div class="progress">
 			<!--
 				total mods:          75    100.00%
-				updated:             37     49.33%
-				kind-of updated:     12     16.00%
+				updated:             40     53.33%
+				kind-of updated:     11     14.67%
 				kind-of outdated:    0       0.00%
-				outdated:            25     33.33%
+				outdated:            23     30.67%
 				abandoned:           1       1.33%
 			-->
-			<div class="updated" style="width:49.5%"></div>
-			<div class="kindof-updated" style="width:16%"></div>
+			<div class="updated" style="width:53%"></div>
+			<div class="kindof-updated" style="width:14.5%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:33%"></div>
+			<div class="outdated" style="width:31%"></div>
 			<div class="abandoned" style="width:1.5%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -547,7 +547,7 @@
 				<p>Implements the OptiFine custom GUI format.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.9</span>
+				<span class="updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
 		<div class="mod" id="polytone">
@@ -904,7 +904,7 @@
 				<p>Allows for taking screenshots of any resolution.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.8</span>
+				<span class="updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
 		<div class="mod" id="jade">
@@ -1060,7 +1060,7 @@
 				<p>Touches up a few aspects of the mundane chat.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.8</span>
+				<span class="updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
 		<div class="mod" id="cherished-worlds">
