--- a/mods.html
+++ b/mods.html
@@ -201,16 +201,16 @@
 		<div class="progress">
 			<!--
 				total mods:          75    100.00%
-				updated:             40     53.33%
-				kind-of updated:     11     14.67%
+				updated:             43     57.33%
+				kind-of updated:     9      12.00%
 				kind-of outdated:    0       0.00%
-				outdated:            23     30.67%
+				outdated:            22     29.33%
 				abandoned:           1       1.33%
 			-->
-			<div class="updated" style="width:53%"></div>
-			<div class="kindof-updated" style="width:14.5%"></div>
+			<div class="updated" style="width:57.5%"></div>
+			<div class="kindof-updated" style="width:12%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:31%"></div>
+			<div class="outdated" style="width:29%"></div>
 			<div class="abandoned" style="width:1.5%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -589,7 +589,7 @@
 				<p>Adds some configurations not included in <a href="#sodium">Sodium</a>, such as adjustable cloud height and more advanced particle controls.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.9</span>
+				<span class="updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
 		<div class="mod" id="zoomify">
@@ -761,7 +761,7 @@
 				<p>Overhauls the advancements screen.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.8</span>
+				<span class="updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
 		<div class="mod" id="particular">
@@ -1144,7 +1144,7 @@
 				<p>Better options menu for <a href="#sodium">Sodium</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.9</span>
+				<span class="updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
 		<h2>Dependencies</h2>
@@ -1174,7 +1174,7 @@
 				<p>Required by <a href="#locator-heads">Locator Heads</a>, <a href="#more-culling">More Culling</a>, <a href="#no-chat-reports">No Chat Reports</a>, <a href="#paginated-advancements">Paginated Advancements</a>, <a href="#sound-physics-remastered">Sound Physics Remastered</a>, <a href="#visuality">Visuality</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.9</span>
+				<span class="updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
 		<div class="mod" id="fabric-api">
