--- a/mods.html
+++ b/mods.html
@@ -201,16 +201,16 @@
 		<div class="progress">
 			<!--
 				total mods:          75    100.00%
-				updated:             44     58.67%
+				updated:             45     60.00%
 				kind-of updated:     9      12.00%
 				kind-of outdated:    0       0.00%
-				outdated:            21     28.00%
+				outdated:            20     26.67%
 				abandoned:           1       1.33%
 			-->
-			<div class="updated" style="width:58.5%"></div>
+			<div class="updated" style="width:60%"></div>
 			<div class="kindof-updated" style="width:12%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:28%"></div>
+			<div class="outdated" style="width:26.5%"></div>
 			<div class="abandoned" style="width:1.5%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -1116,7 +1116,7 @@
 				<p>Adds lodestones to the player locator bar.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.8</span>
+				<span class="updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
 		<div class="mod" id="no-chat-reports">
