--- a/mods.html
+++ b/mods.html
@@ -201,14 +201,14 @@
 		<div class="progress">
 			<!--
 				total mods:          75    100.00%
-				updated:             48     64.00%
-				kind-of updated:     6       8.00%
+				updated:             49     65.33%
+				kind-of updated:     5       6.67%
 				kind-of outdated:    0       0.00%
 				outdated:            20     26.67%
 				abandoned:           1       1.33%
 			-->
-			<div class="updated" style="width:64%"></div>
-			<div class="kindof-updated" style="width:8%"></div>
+			<div class="updated" style="width:65.5%"></div>
+			<div class="kindof-updated" style="width:6.5%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
 			<div class="outdated" style="width:26.5%"></div>
 			<div class="abandoned" style="width:1.5%"></div>
@@ -360,7 +360,7 @@
 				<p>More aggressive block face culling.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.9</span>
+				<span class="updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
 		<div class="mod" id="noisium">
