replace particular with particular reforged

--- a/mods.html
+++ b/mods.html
@@ -201,16 +201,16 @@
 		<div class="progress">
 			<!--
 				total mods:          75    100.00%
-				updated:             55     73.33%
+				updated:             56     74.67%
 				kind-of updated:     4       5.33%
 				kind-of outdated:    0       0.00%
-				outdated:            15     20.00%
+				outdated:            14     18.67%
 				abandoned:           1       1.33%
 			-->
-			<div class="updated" style="width:73.5%"></div>
+			<div class="updated" style="width:75%"></div>
 			<div class="kindof-updated" style="width:5%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:20%"></div>
+			<div class="outdated" style="width:18.5%"></div>
 			<div class="abandoned" style="width:1.5%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -764,18 +764,18 @@
 				<span class="updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
-		<div class="mod" id="particular">
+		<div class="mod" id="particular-reforged">
 			<div class="mod-icon">
-				<img src="https://cdn.modrinth.com/data/B1CcCd9h/1764f9ce329d9e87a6e043d0f3eb68bb1855c0cf_96.webp" />
+				<img src="https://cdn.modrinth.com/data/pYFUU6cq/152536579fe8e475149273b64cabdef764b3da9f_96.webp" />
 			</div>
 			<div class="mod-description">
 				<h3>
-					<a href="https://modrinth.com/mod/particular" target="_blank">Particular</a>
+					<a href="https://modrinth.com/mod/particular-reforged" target="_blank">Particular Reforged</a>
 				</h3>
 				<p>Enhances Minecraft's ambience with hand-crafted visual effects.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.4</span>
+				<span class="updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
 		<div class="mod" id="smooth-scroll">
@@ -1184,7 +1184,7 @@
 				<h3>
 					<a href="https://modrinth.com/mod/fabric-api" target="_blank">Fabric API</a>
 				</h3>
-				<p>Required by <a href="#better-statistics-screen">Better Statistics Screen</a>, <a href="#enhanced-block-entities">Enhanced Block Entities</a>, <a href="#nuit">Nuit</a>, <a href="#horse-stats-vanilla">Horse Stats Vanilla</a>, <a href="#locator-heads">Locator Heads</a>, <a href="#locator-lodestones">Locator Lodestones</a>, <a href="#mod-menu">Mod Menu</a>, <a href="#no-chat-reports">No Chat Reports</a>, <a href="#optigui">OptiGUI</a>, <a href="#particle-core">Particle Core</a>, <a href="#shulker-box-tooltip">Shulker Box Tooltip</a>, <a href="#smooth-swapping">Smooth Swapping</a>, and <a href="#sodium-dynamic-lights">Sodium Dynamic Lights</a>.</p>
+				<p>Required by <a href="#enhanced-block-entities">Enhanced Block Entities</a>, <a href="#locator-heads">Locator Heads</a>, <a href="#locator-lodestones">Locator Lodestones</a>, <a href="#mod-menu">Mod Menu</a>, <a href="#no-chat-reports">No Chat Reports</a>, <a href="#optigui">OptiGUI</a>, <a href="#particle-core">Particle Core</a>, <a href="#particular-reforged">Particular Reforged</a>, <a href="#shulker-box-tooltip">Shulker Box Tooltip</a>, <a href="#smooth-swapping">Smooth Swapping</a>, and <a href="#sodium-dynamic-lights">Sodium Dynamic Lights</a>.</p>
 			</div>
 			<div class="mod-version">
 				<span class="updated"><span class="circle"></span> 1.21.10</span>
@@ -1199,6 +1199,20 @@
 					<a href="https://modrinth.com/mod/fabric-language-kotlin" target="_blank">Fabric Language Kotlin</a>
 				</h3>
 				<p>Required by <a href="#optigui">OptiGUI</a>, <a href="#particle-core">Particle Core</a>, and <a href="#zoomify">Zoomify</a>.</p>
+			</div>
+			<div class="mod-version">
+				<span class="updated"><span class="circle"></span> 1.21.10</span>
+			</div>
+		</div>
+		<div class="mod" id="owo">
+			<div class="mod-icon">
+				<img src="https://cdn.modrinth.com/data/ohNO6lps/cb3b942cc18a66a0f35f802e004713f134e46cc2_96.webp" />
+			</div>
+			<div class="mod-description">
+				<h3>
+					<a href="https://modrinth.com/mod/forge-config-api-port" target="_blank">Forge Config API Port</a>
+				</h3>
+				<p>Required by <a href="#particular-reforged">Particular Reforged</a>.</p>
 			</div>
 			<div class="mod-version">
 				<span class="updated"><span class="circle"></span> 1.21.10</span>
@@ -1241,20 +1255,6 @@
 					<a href="https://modrinth.com/mod/mru" target="_blank">M.R.U.</a>
 				</h3>
 				<p>Required by <a href="#sounds">Sounds</a>.</p>
-			</div>
-			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.10</span>
-			</div>
-		</div>
-		<div class="mod" id="owo">
-			<div class="mod-icon">
-				<img src="https://cdn.modrinth.com/data/ccKDOlHs/42c9fe358c72dd5afda078271c574c325e963d19_96.webp" />
-			</div>
-			<div class="mod-description">
-				<h3>
-					<a href="https://modrinth.com/mod/owo-lib" target="_blank">oωo</a>
-				</h3>
-				<p>Required by <a href="#particular">Particular</a>.</p>
 			</div>
 			<div class="mod-version">
 				<span class="updated"><span class="circle"></span> 1.21.10</span>
