--- a/mods.html
+++ b/mods.html
@@ -219,7 +219,7 @@
 			<li><span class="kindof-updated"><b>Yellow</b></span> means that it doesn't officially support the latest release, but has been tested by me and <i>appears</i> to function properly. (I make no guarantee that it will work for you.)</li>
 			<li><span class="kindof-outdated"><b>Orange</b></span> means that it won't load in the latest release, but a small modification to the fabric.mod.json file corrects this. It <i>appears</i> to function properly otherwise. (Again, I make no guarantee that it will work for you.)</li>
 			<li><span class="outdated"><b>Red</b></span> means that no compatibility with the latest release exists.</li>
-			<li><span class="abandoned"><b>Gray</b></span> means that the project owner(s) have expressed little/no intention to update the mod to the latest release. These mods are likely to be removed from the list entirely should neither the owner(s) nor a 3rd-party update the mod within 2 major versions.</li>
+			<li><span class="abandoned"><b>Gray</b></span> means that the project owner(s) have expressed little/no intention to update the mod to the latest release. These mods are likely to be removed from this list in the near future should they remain unmaintained.</li>
 		</ul>
 		<h2>Performance Optimizations</h2>
 		<p>The following mods provide various performance optimizations across multiple layers and aspects of the game.</p>
