--- a/mods.html
+++ b/mods.html
@@ -1170,7 +1170,7 @@
 				<h3>
 					<a href="https://modrinth.com/mod/cloth-config" target="_blank">Cloth Config API</a>
 				</h3>
-				<p>Required by <a href="#locator-heads">Locator Heads</a>, <a href="#more-culling">More Culling</a>, <a href="#no-chat-reports">No Chat Reports</a>, <a href="#paginated-advancements">Paginated Advancements</a>, <a href="#sound-physics-remastered">Sound Physics Remastered</a>, <a href="#visuality">Visuality</a>.</p>
+				<p>Required by <a href="#drip-sounds">Drip Sounds</a>, <a href="#locator-heads">Locator Heads</a>, <a href="#more-culling">More Culling</a>, <a href="#no-chat-reports">No Chat Reports</a>, <a href="#paginated-advancements">Paginated Advancements</a>, <a href="#sound-physics-remastered">Sound Physics Remastered</a>, <a href="#visuality">Visuality</a>.</p>
 			</div>
 			<div class="mod-version">
 				<span class="updated"><span class="circle"></span> 1.21.10</span>
