--- a/mods.html
+++ b/mods.html
@@ -201,16 +201,16 @@
 		<div class="progress">
 			<!--
 				total mods:          74    100.00%
-				updated:             64     86.49%
-				kind-of updated:     3       4.05%
+				updated:             66     89.19%
+				kind-of updated:     2       2.70%
 				kind-of outdated:    0       0.00%
-				outdated:            7       9.46%
+				outdated:            6       8.11%
 				abandoned:           0       0.00%
 			-->
-			<div class="updated" style="width:86.5%"></div>
-			<div class="kindof-updated" style="width:4%"></div>
+			<div class="updated" style="width:89%"></div>
+			<div class="kindof-updated" style="width:3%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:9.5%"></div>
+			<div class="outdated" style="width:8%"></div>
 			<div class="abandoned" style="width:0%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -332,7 +332,7 @@
 				<p>Optimizes networking.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.9</span>
+				<span class="updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
 		<div class="mod" id="language-reload">
@@ -346,7 +346,7 @@
 				<p>Makes switching between languages instant.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.8</span>
+				<span class="updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
 		<div class="mod" id="lithium">
