--- a/mods.html
+++ b/mods.html
@@ -201,16 +201,16 @@
 		<div class="progress">
 			<!--
 				total mods:          74    100.00%
-				updated:             21     28.38%
+				updated:             22     29.73%
 				kind-of updated:     1       1.35%
 				kind-of outdated:    0       0.00%
-				outdated:            52     70.27%
+				outdated:            51     68.92%
 				abandoned:           0       0.00%
 			-->
-			<div class="updated" style="width:28.5%"></div>
+			<div class="updated" style="width:29.5%"></div>
 			<div class="kindof-updated" style="width:1.5%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:70%"></div>
+			<div class="outdated" style="width:69%"></div>
 			<div class="abandoned" style="width:0%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -660,7 +660,7 @@
 				<p>Ports the bugfixes offered by the Paper project to Fabric.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.10</span>
+				<span class="updated"><span class="circle"></span> 1.21.11</span>
 			</div>
 		</div>
 		<h2>Graphical and Audio Enhancements</h2>
