--- a/mods.html
+++ b/mods.html
@@ -201,16 +201,16 @@
 		<div class="progress">
 			<!--
 				total mods:          74    100.00%
-				updated:             51     68.92%
+				updated:             52     70.27%
 				kind-of updated:     0       0.00%
 				kind-of outdated:    0       0.00%
-				outdated:            23     31.08%
+				outdated:            22     29.73%
 				abandoned:           0       0.00%
 			-->
-			<div class="updated" style="width:69%"></div>
+			<div class="updated" style="width:70%"></div>
 			<div class="kindof-updated" style="width:0%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:31%"></div>
+			<div class="outdated" style="width:30%"></div>
 			<div class="abandoned" style="width:0%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -790,7 +790,7 @@
 				<p>Hide only the HUD using F1.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.10</span>
+				<span class="updated"><span class="circle"></span> 1.21.11</span>
 			</div>
 		</div>
 		<div class="mod" id="betterf3">
