--- a/mods.html
+++ b/mods.html
@@ -201,16 +201,16 @@
 		<div class="progress">
 			<!--
 				total mods:          74    100.00%
-				updated:             65     87.84%
+				updated:             66     89.19%
 				kind-of updated:     0       0.00%
 				kind-of outdated:    0       0.00%
-				outdated:            9      12.16%
+				outdated:            8      10.81%
 				abandoned:           0       0.00%
 			-->
-			<div class="updated" style="width:88%"></div>
+			<div class="updated" style="width:89%"></div>
 			<div class="kindof-updated" style="width:0%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:12%"></div>
+			<div class="outdated" style="width:11%"></div>
 			<div class="abandoned" style="width:0%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -332,7 +332,7 @@
 				<p>Makes switching between languages instant.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.10</span>
+				<span class="updated"><span class="circle"></span> 1.21.11</span>
 			</div>
 		</div>
 		<div class="mod" id="lithium">
