closer to modrinth look and feel

--- a/mods.html
+++ b/mods.html
@@ -70,7 +70,7 @@
 				display: flex;
 				flex-wrap: wrap;
 				background-color: rgb(38, 41, 47);
-				padding: 0.5em;
+				padding: 1.5rem;
 				border-radius: 1rem;
 				margin: 1em;
 			}
@@ -121,8 +121,8 @@
 			.mod .mod-icon img,
 			.mod .mod-icon svg
 			{
-				width: 128px;
-				border-radius: 21px;
+				width: 96px;
+				border-radius: 16px;
 				background-color: rgb(67, 73, 86);
 			}
 		</style>
