bring back lambdynamiclights

--- a/mods.html
+++ b/mods.html
@@ -186,10 +186,10 @@
 					'entity-model-features',
 					'entitytexturefeatures',
 					'iris',
+					'lambdynamiclights',
 					'optigui',
 					'polytone',
 					'skyboxify',
-					'sodium-dynamic-lights',
 					'sodium-extra',
 					'zoomify'
 				], [
